# pointz

./: Cargo.toml  draw_circle.glsl
physics/src/: lib.rs
resources/: penguin.mtl  sphere.mtl
src/: app.rs  buffer.rs  camera.rs  camera_controller.rs  controls.rs  instance.rs  lighting.rs  main.rs  model.rs  object.rs  scene.rs  shader.rs  texture.rs  vertex.rs
src/drawer/: bounding_sphere.rs  debug.rs  mod.rs  model.rs  render.rs
src/editor/: mod.rs
src/event/: processor.rs
src/model/: mod.rs
src/model/primitives/: bounding_sphere.rs  cube.rs  mod.rs
src/physics/: Cargo.toml
src/physics/src/: lib.rs
src/primitives/: bounding_sphere.rs  cube.rs  mod.rs
src/renderer/: bounding_sphere.rs  bounding_sphere_2.rs  bounding_sphere_to_delete.rs  buffer.rs  debug.rs  mod.rs  model.rs  render.rs
src/scene/: manager.rs
src/shader/: bounding_sphere.frag  bounding_sphere.vert  debug.vert  frag.spv  light.vert  light_vert.spv  line.frag  line.vert  line_old.frag  my.frag  my.vert  my_frag.spv  my_vert.spv  shader.frag  shader.vert  vert.spv
src/shader/debug/: frag.spv  shader.frag  vert.spv
src/shader/spv/: bounding_sphere.frag.spv  bounding_sphere.vert.spv  debug.frag.spv  debug.vert.spv  light.vert.spv  line.frag.spv  line.vert.spv  line_old.frag.spv  shader.frag.spv  shader.vert.spv
src/widgets/: fps.rs
