[package]
name = "pointz"
version = "0.1.1"
authors = ["Anton Zelenin <ntnzelenin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use commit 3042fa2cb63c651ebed2abe6f4054e61f70b0331 of iced repo
iced = {path = '../iced', default_features = false, features = ["wgpu"] }
iced_winit = {path = '../iced/winit'}
iced_wgpu = {path = '../iced/wgpu', features = ["spirv"]}
cgmath = "0.18"
bytemuck = "1.9.1"
shaderc = "0.7.4"
image = "0.24.1"
log = "0.4.16"
tobj = "2.0.3"
anyhow = "1.0.56"
glam = "0.20.3"
ordered-float = "2.10.0"
core-foundation = "0.9.3"
